<resources>
    <string name="app_name">Carbon Footprint Tracker</string>
    <string name="carbon_footprint_tracker">Carbon Footprint Tracker</string>
    <string name="get_started">Get Started</string>
    <string name="earth_main">earth_main</string>
    <string name="welcome">Welcome</string>
    <string name="email_address">email address</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign-up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="earth_logo">earth_logo</string>
    <string name="good_afternoon">Hello</string>
    <string name="user_name">TextView</string>
    <string name="profile">Profile</string>
    <string name="record_footprint">Record Footprint</string>
    <string name="check_points">Check Points</string>
    <string name="share_on_social_media">Share on Social Media</string>
    <string name="log_out">Log out</string>
    <string name="reminders_alert">Reminders/Alert</string>
    <string name="avatar">avatar</string>
    <string name="points_recorder">Points Recorder</string>
    <string name="record_emission">Record Emission</string>
    <string name="action">Action</string>
    <string name="reminder">Things You Can Do</string>
    <string name="share">Share &amp; Encourage others to join</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_and_time">Date and Time</string>
    <string name="choose_date">Choose Date</string>
    <string name="photo">photo</string>
    //yuri's strings of register,profile,login
    <string name="password_failed">Forgot your password?</string>
    <string name="login_lead">Already a member?login</string>
    <string name="welcome2">Login to your account</string>
    <string name="setting_name">sample@sample.com</string>
    <string name="setting_password">**********</string>
    <string name="action_set_in">create your account</string>
    <string name="contribution">Thank you for your contribution.</string>
    <string name="log_out_application">Go back to Application</string>
    <string name="log_out_image">log out image</string>
    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="shop">Shop</string>
    <string name="actions">Actions</string>
    <string name="train">train</string>
    <string name="heavy_meat">Heavy Meat</string>
    <string name="medium_meat">Medium Meat</string>
    <string name="light_meat">Light Meat</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="supermarket_retailers">Organic, Fair Trade and Sustainable Supermarkets</string>
    <string name="clothing_retailers">Ethical and Recycled Clothing Retailers</string>
    <string name="homeware_retailers">Eco-Friendly Electronic Goods and Homewares</string>
    <string name="cosmetics_retailers">Ingredient-Conscious Personal Care and Beauty Products</string>
    <string name="outdoor_retailers">Natural and Organic Gardening Retailers</string>
    <string name="date_travelled">Date Travelled</string>
    <string name="type_of_vehicle">Type of Vehicle</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="textview">TextView</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="select_date">Select Date</string>
    <string name="conserve_energy">Conserve Energy</string>
    <string name="recycle">Recycle</string>
    <string name="bike_more">Bike More</string>
    <string name="disposable_packaging">Less Disposable Packaging</string>
    <string name="plant_trees">Plant Trees</string>
    <string name="facebook_app_id">3126826070919344</string>
    <string name="facebook_client_token">1b4cccb2df42b91d59867bf75f651328</string>
    <string name="save_points">Save Points</string>
    <string name="change_language">Change_language</string>
    <string name="shop_wisely">Shop Wisely</string>
    <string name="language">Language</string>
    <string name="enter_password">enter_password</string>
    <string name="settings">Settings</string>
    <string name="total_food_points">Total Food Points</string>
    <string name="total_action_points">Total Action Points</string>
    <string name="total_shop_points">Total Shop Points</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="English">English</string>
    <string name="Chinese">Chinese</string>
    <string name="invalid_input">Your password or username is invalid</string>
    <string name="enter">Please Enter UserName or Password.</string>
    <string name="login_successfully">Login Successfully.</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">password</string>
    <string name="add_user">add_user</string>
    <string name="delete_data">enter_name_to_delete_data</string>
    <string name="delete">delete</string>
    <string name="current_name">current_name</string>
    <string name="new_name">new_name</string>
    <string name="calculate_points">Calculate Points</string>
    <string name="travel_type">Travel Type</string>
    <string name="type_of_flight"> Type of Flight</string>
    <string name="class_flight">Class</string>
    <string name="car">car</string>
    <string name="bicycle">bicycle</string>
    <string name="airplane">airplane</string>
    <string name="walk">walk</string>
    <string name="diesel">Diesel</string>
    <string name="petrol">Petrol</string>
    <string name="hybrid">Hybrid</string>
    <string name="full_ev">Full EV</string>
    <string name="small">Small</string>
    <string name="suv">SUV</string>
    <string name="van">VAN</string>
    <string name="update">update</string>
    <string name="update_username">update username</string>
    <string name="update_password">update password</string>
    <string name="old_username">old username</string>
    <string name="new_username">new username</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="enter_data">Enter Data</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="updated">Updated</string>
    <string name="view_data">View Data</string>

    <string name="create_your_account">Create your account</string>

</resources>