<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cf_green"
    tools:context=".MenuPage">

    <FrameLayout
        android:layout_width="370dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="179dp"
            android:layout_height="43dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat"
            android:justificationMode="inter_word"
            android:textAllCaps="false"
            android:textColor="#00695C"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/good_afternoon"
            />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat"
            android:justificationMode="inter_word"
            android:textAllCaps="false"
            android:textColor="#00695C"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/userName" />


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="75dp"
            android:layout_height="59dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/avatar"
            android:fontFamily="@font/montserrat"
            app:srcCompat="@drawable/girl" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="250dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat"
            android:text="@string/profile"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#0D47A1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="profilePageButton"/>


        <Button
            android:id="@+id/record_footprint_button"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="320dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat"
            android:text="@string/record_footprint"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#0D47A1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="recordFootprintButton"/>


        <Button
            android:id="@+id/check_points_button"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="390dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat"
            android:text="@string/check_points"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#0D47A1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="checkPointsButton"/>


        <Button
            android:id="@+id/reminders_button"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="460dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat"
            android:text="@string/reminders_alert"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#0D47A1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="remindersButton"/>



        <Button
            android:id="@+id/share_button"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="530dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat"
            android:text="@string/share_on_social_media"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#0D47A1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="shareButton"/>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="620dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat"
            android:shadowColor="#000000"
            android:shadowDx="1.8"
            android:shadowDy="1.8"
            android:shadowRadius="1.6"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/cf_orange"
            android:textSize="28sp"
            android:textStyle="bold"
            android:onClick="logoutButton"/>


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>